Sat Mar 22 12:35:47 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-109.xml
	  tests/general/Makefile.am tests/general/bug-109*: added an
	  example in the regression tests for the invalid bug #108716

Sat Mar 22 12:01:24 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixed bug #108633 reported by
	  Jerome Pesenti about recursive global variables/param detections
	* tests/reports/Makefile.am tests/reports/rec*: added regression
	  tests for the checking of recusion in global/local param/variables.

Fri Mar  7 16:08:24 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: valgrind pointed out an uninitialized
	  variable use in format-number()

Fri Mar  7 15:27:56 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-108.xml
	  tests/general/Makefile.am tests/general/bug-108*: added an
	  example in the regression tests bug #107804 fixed in libxml2

Wed Mar  5 12:47:31 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed bug #107591 node() in pattern
	  matches should catch comments and PIs
	* tests/docs/Makefile.am tests/docs/bug-107.xml
	  tests/general/Makefile.am tests/general/bug-107*: added an
	  example in the regression tests for this case

Wed Feb 26 16:49:17 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-106.xml
	  tests/general/Makefile.am tests/general/bug-106*: added the next
	  example for bug #106788 from James Clark in the regression tests,
	  the bug fix is actually in libxml2

Tue Feb 25 16:19:45 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/Makefile.am xsltproc/Makefile.am: some cleanup
	  for Python checks, makefile cleanup, and convenience changes

Mon Feb 24 23:49:01 CET 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: had to comment out Igor last change
	  since it made libxslt-1.0.27 depends on libxml2 newly 