@@ -114,6 +114,7 @@ EXTRA_DIST = \
     bug-107.out bug-107.xsl \
     bug-108.out bug-108.xsl \
     bug-109.out bug-109.xsl \
+    bug-110.out bug-110.xsl \
     character.out character.xsl \
     character2.out character2.xsl \
     itemschoose.out itemschoose.xsl \
